fix(grid): Horizontal scroll

--- a/src/list-header.module/index.styl
+++ b/src/list-header.module/index.styl
@@ -7,7 +7,6 @@ $nz-columns-height ?= 44px
   justify-content: stretch
   flex: none
   height: $nz-columns-height
-  padding: 0 24px
 
 .nz-column
   position: relative
